--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 <h1>Добрый день</h1>
 <p>Сайт еще в разработке</p>
 <p>Просим покинуть сайт!!!</p>
+
+$params = array(
+	'client_id'     => '67b0e699681fd8aebcb1',
+	'redirect_uri'  => 'https://avalin.github.io/%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D0%BA%D0%B0',
+	'scope'         => 'user',
+	'response_type' => 'code',
+	'state'         => ''
+);
+ 
+$url = 'https://github.com/login/oauth/authorize?' . urldecode(http_build_query($params));
+echo '<a href="' . $url . '">Войти через GitHub</a>';
