--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>
 $params = array(
 	'client_id'     => '67b0e699681fd8aebcb1',
-	'redirect_uri'  => 'https://avalin.github.io/%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D0%BA%D0%B0',
+	'redirect_uri'  => 'https://avalin.github.io',
 	'scope'         => 'user',
 	'response_type' => 'code',
 	'state'         => ''
