--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 
 
 <script>
+
+    </script>
+
 $params = array(
-	'client_id'     => '67b0e699681fd8aebcb1',
-	'redirect_uri'  => 'https://avalin.github.io',
+	'client_id'     => '23f429aebcdc6b16765b',
+	'redirect_uri'  => 'https://avalin24.github.io/Обработка.вх.рег.pnp',
 	'scope'         => 'user',
 	'response_type' => 'code',
 	'state'         => ''
@@ -15,4 +18,3 @@ $params = array(
  
 $url = 'https://github.com/login/oauth/authorize?' . urldecode(http_build_query($params));
 echo '<a href="' . $url . '">Войти через GitHub</a>';
-    </script>
