--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Название документа</title>
+    <title>AvaLin</title>
     <style>
       #navbar {
         margin: 0;
