--- a/index.html
+++ b/index.html
@@ -2,42 +2,61 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>AvaLin</title>
+    <title>Название документа</title>
     <style>
-      #navbar {
+      #navbar ul{
+        display: none;
+        background-color: #f90;
+        position: absolute;
+        top: 100%;
+      }
+      #navbar li:hover ul { display: block; }
+      #navbar, #navbar ul{
         margin: 0;
         padding: 0;
         list-style-type: none;
-        width: 100px;
+      }
+      #navbar {
+        height: 30px;
+        background-color: #666;
+        padding-left: 25px;
+        min-width: 470px;
       }
       #navbar li {
-        border-left: 10px solid #666;
-        border-bottom: 1px solid #666;
+        float: left;
+        position: relative;
+        height: 100%;
       }
-      #navbar a {
-        background-color: #949494;
-        color: #fff;
-        padding: 5px;
-        text-decoration: none;
-        font-weight: bold;
-        border-left: 5px solid #33ADFF;
+      #navbar li a {
         display: block;
+        padding: 6px;
+        width: 100px;
+        color: #fff;
+        text-decoration: none;
+        text-align: center;
       }
-      #navbar a:hover {
-        background-color: #666;
-        border-left: 5px solid #3333FF;
-      }
+      #navbar ul li { float: none; }
+      #navbar li:hover { background-color: #f90; }
+      #navbar ul li:hover { background-color: #666; }
     </style>
   </head>
  
   <body>
-   
+  
     <ul id="navbar">
       <li><a href="#">Главная</a></li>
-      <li><a href="#">Помощь</a></li>
-      <li><a href="#">Правила</a></li>
-      <li><a href="#">Аккаунт</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="#">Контакты</a>
+        <ul>
+          <li><a href="#">Адрес</a></li>
+          <li><a href="#">Телефон</a></li>
+          <li><a href="#">Email</a></li>
+        </ul>
+      </li>
+      <li><a href="#">О нас</a></li>
     </ul>
+ 
+    <p>Абзац с текстом был добавлен для демонстрации того, что при открытии подпунктов меню они будут скрывать часть контента, а не сдвигать его.</p>
  
   </body>
 </html>
