--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Название документа</title>
+    <title>AvaLin</title>
     <style>
       #navbar ul{
         display: none;
@@ -44,11 +44,11 @@
   <body>
   
     <ul id="navbar">
-      <li><a href="#">Главная</a></li>
-      <li><a href="#">Новости</a></li>
-      <li><a href="#">Контакты</a>
+      <li><a href="#">Играть</a></li>
+      <li><a href="#">Правила</a></li>
+      <li><a href="#">Помощь</a>
       </li>
-      <li><a href="#">О нас</a></li>
+      <li><a href="#">Аккаунт</a></li>
     </ul>
  
     <p>Абзац с текстом был добавлен для демонстрации того, что при открытии подпунктов меню они будут скрывать часть контента, а не сдвигать его.</p>
