--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
       <li><a href="#">Аккаунт</a></li>
     </ul>
  
-    <p>Абзац с текстом был добавлен для демонстрации того, что при открытии подпунктов меню они будут скрывать часть контента, а не сдвигать его.</p>
+    <h1>AvaLin</h1>
+    <p>Новый сервер аватарии</p>
+    <style>
+/* Стили кнопки */
+.iksweb{display: inline-block;cursor: pointer; font-size:21px;text-decoration:none;padding:9px 29px; color:#354251;background:#ffff0;border-radius:10px;border:2px solid #354251;}
+.iksweb:hover{background:#354251;color:#ffffff;border:2px solid #354251;transition: all 0.2s ease;}
+</style>
+
+<a class="iksweb" href="https://avalin24.github.io/"   title="Играть">Играть</a>
  
   </body>
 </html>
