--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 .iksweb:hover{background:#354251;color:#ffffff;border:2px solid #354251;transition: all 0.2s ease;}
 </style>
 
-<a class="iksweb" href="https://avalin24.github.io/"   title="Играть">Играть</a>
+<a class="iksweb" href="https://avalin24.github.io/pnp,AvaLin"   title="Играть">Играть</a>
  
   </body>
 </html>
