--- a/index.html
+++ b/index.html
@@ -3,42 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>AvaLin</title>
-    <style>
-      #navbar ul{
-        display: none;
-        background-color: #f90;
-        position: absolute;
-        top: 100%;
-      }
-      #navbar li:hover ul { display: block; }
-      #navbar, #navbar ul{
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-      }
-      #navbar {
-        height: 30px;
-        background-color: #666;
-        padding-left: 25px;
-        min-width: 470px;
-      }
-      #navbar li {
-        float: left;
-        position: relative;
-        height: 100%;
-      }
-      #navbar li a {
-        display: block;
-        padding: 6px;
-        width: 100px;
-        color: #fff;
-        text-decoration: none;
-        text-align: center;
-      }
-      #navbar ul li { float: none; }
-      #navbar li:hover { background-color: #f90; }
-      #navbar ul li:hover { background-color: #666; }
-    </style>
+        <link rel="stylesheet" href="Весь.код.css" media="all" type="text/css"/>
   </head>
  
   <body>
@@ -53,12 +18,7 @@
  
     <h1>AvaLin</h1>
     <p>Новый сервер аватарии</p>
-    <style>
-/* Стили кнопки */
-.iksweb{display: inline-block;cursor: pointer; font-size:21px;text-decoration:none;padding:9px 29px; color:#354251;background:#ffff0;border-radius:10px;border:2px solid #354251;}
-.iksweb:hover{background:#354251;color:#ffffff;border:2px solid #354251;transition: all 0.2s ease;}
-</style>
-
+    
 <a class="iksweb" href="https://avalin24.github.io/pnp,AvaLin"   title="Играть">Играть</a>
  
   </body>
