--- a/journals/11-ә-Тарихи_елдер_2019.html
+++ b/journals/11-ә-Тарихи_елдер_2019.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="dialogs/dialogs" src="https://static.kundelik.kz/assets/scripts/modules/dialogs/dialogs.js?v=4d2324e5"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="journalTable/journalTable" src="https://static.kundelik.kz/assets/scripts/modules/journalTable/journalTable.js?v=4d2324e5"></script><script type="text/javascript" charset="utf-8" async="" data-requirecontext="_" data-requiremodule="analytics/commonYaMetrika" src="https://static.kundelik.kz/assets/scripts/modules/analytics/commonYaMetrika.js?v=4d2324e5"></script></head>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
     <meta name="google" value="notranslate">
     <title>Суммативные оценки - Kundelik.kz</title>
@@ -59,24 +60,24 @@
     <div class="journal-header__panel">
         <div>
             <div class="journal-header__title">
-                <h1 class="h1 h1_purple h1_margin-top-5 h1_inline-block h1_margin-right-40">Тарих</h1>
-                <h2 class="h2 h2_bold h2_inline-block h2_grey h2_margin-top-8">2020/2021 учебный год</h2>
+                <h1 class="h1 h1_purple h1_margin-top-5 h1_inline-block h1_margin-right-40">Физкультура</h1>
+                <h2 class="h2 h2_bold h2_inline-block h2_grey h2_margin-top-8">2021/2022 учебный год</h2>
             </div>
             
             <div class="journal-header__teachers-row">
                     <div>
                         <span class="journal-header__teachers-row__label">Учитель:</span>
                             <span class="journal-header__display-inline">
-                                <a class="journal-header__teachers-row__link" href="https://kundelik.kz/user/user.aspx?user=1000008481877">Еркебай Сембеиевич Сартбаев</a>
+                                <a class="journal-header__teachers-row__link" href="https://kundelik.kz/user/user.aspx?user=1000008481877">Черненков Дмитрий Игоревич</a>
                             </span>
-                            <span class="journal-header__not-display">Еркебай Сембеиевич Сартбаев</span>
+                            <span class="journal-header__not-display">Черненков Дмитрий Игоревич</span>
                             <span class="journal-header__not-display">,</span>
                     </div>
             </div>
 
             <div class="journal-header__group-subject-row">
                 <span class="journal-header__group-subject-row__class-label">Класс:</span>
-                <span class="journal-header__group-subject-row__class-name">11-а</span>
+                <span class="journal-header__group-subject-row__class-name">8Б</span>
 
                 <span class="journal-header__group-subject-row__subject-label">Предмет:</span>
                 
